--- a/src/app-info.scss
+++ b/src/app-info.scss
@@ -1,3 +1,3 @@
-:root { --APP-INFO:
-  certifico-included-assets v.0.0.7 / 2024.10.18 16:20 +0300;
+:root {
+  --APP-INFO: certifico-included-assets v.0.0.7 / 2024.1.18 16: 27 +0300;
 }
