--- a/src/misc-styles/PricesAndTerms.scss
+++ b/src/misc-styles/PricesAndTerms.scss
@@ -6,7 +6,7 @@
     color: var(--themeMoodLight50Color);
     border-bottom: 2px solid rgba(var(--themeMoodLight50RBG) / 50%);
     padding-bottom: 0.25em;
-    margin-bottom: .5em;
+    margin-bottom: 0.5em;
   }
   .t1095 .t-list__item {
     // border: 2px solid green;
